FileChooserで落ちる場合がある問題, 列幅の問題を追加修正